styles.css
@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");

:root,
* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	border: 0;
}

:root {
	/* Primary colors. */
	--soft-blue: hsl(215, 51%, 70%);
	--cyan: hsl(178, 100%, 50%);
	/* Neutral colors. */
	--very-dark-blue-main-bg: hsl(217, 54%, 11%);
	--very-dark-blue-card-bg: hsl(216, 50%, 16%);
	--very-dark-blue-line: hsl(215, 32%, 27%);
	--white: hsl(0, 0%, 100%);
	/* Footer colors. */
	--attribution-blue: hsl(228, 45%, 44%);
	--brandeis-blue: hsl(212, 95%, 48%);
}

body {
	min-height: 100vh;
	font-family: "Outfit", sans-serif;
	background-color: var(--very-dark-blue-main-bg);
	color: var(--white);
	display: grid;
	align-content: center;
}

.attribution {
	font-size: 11px;
	text-align: center;
}

.attribution a {
	color: var(--attribution-blue);
}

